--- a/inicio/index.html
+++ b/inicio/index.html
@@ -34,6 +34,7 @@
 
           <li class="menu-suspenso">
             <button
+              type="button"
               class="menu-suspenso__botao"
               aria-haspopup="true"
               aria-expanded="false"
@@ -82,14 +83,14 @@
             <path
               class="grafico__fundo"
               d="M18 2.0845
-                 a 15.9155 15.9155 0 0 1 0 31.831
-                 a 15.9155 15.9155 0 0 1 0 -31.831"
+                     a 15.9155 15.9155 0 0 1 0 31.831
+                     a 15.9155 15.9155 0 0 1 0 -31.831"
             />
             <path
               class="grafico__progresso"
               d="M18 2.0845
-                 a 15.9155 15.9155 0 0 1 0 31.831
-                 a 15.9155 15.9155 0 0 1 0 -31.831"
+                     a 15.9155 15.9155 0 0 1 0 31.831
+                     a 15.9155 15.9155 0 0 1 0 -31.831"
             />
             <text x="18" y="20.35" class="grafico__texto">0%</text>
           </svg>
