--- a/relatorio/index.html
+++ b/relatorio/index.html
@@ -34,6 +34,7 @@
 
           <li class="menu-suspenso">
             <button
+              type="button"
               class="menu-suspenso__botao"
               aria-haspopup="true"
               aria-expanded="false"
@@ -58,8 +59,8 @@
           </li>
           <li>
             <a href="#" aria-label="Perfil do Usuário"
-              ><i class="bx bx-user-circle"></i
-            ></a>
+              ><i class="bx bx-user-circle"></i></a
+            >
           </li>
         </ul>
       </nav>
